--- a/admin.html
+++ b/admin.html
@@ -54,6 +54,8 @@
     .admin-tab{ background:#eef6ff; border:1px solid #d9ecff; padding:8px 12px; border-radius:999px; cursor:pointer; font-weight:700; color:#0456b2; }
     .admin-tab.active{ background:#fff; border-color: var(--ocean-blue); box-shadow:0 0 0 4px var(--ring); color: var(--ocean-blue); }
     .tools-wrap{ max-width: 720px; margin: 0 auto; display:flex; flex-direction:column; gap:12px; }
+  .backup-link{ color:#0f172a; text-decoration:none; font-weight:700; display:inline-block; padding:4px 0; }
+  .backup-link:hover{ text-decoration:underline; }
     @media (max-width: 1100px){ .admin-grid{ grid-template-columns: 1fr; } .admin-list{ max-height:none; } }
   </style>
   
