--- a/create.html
+++ b/create.html
@@ -10,7 +10,7 @@
   <!-- Consistent dark-blue banner like the home page -->
   <header class="topbar" role="banner">
     <div class="topbar-inner">
-      <div class="brand-wrap">
+      <a class="brand-wrap" href="/" style="text-decoration:none; color:inherit;">
         <img
           class="brand-logo"
           src="https://i.postimg.cc/Fz0xdDzd/Crypto-Lifeguard-Logo-Striking-Impact-background.png"
@@ -22,7 +22,7 @@
           <h1 class="brand-title">Crypto Lifeguard</h1>
           <p class="brand-tagline">Create a new alert</p>
         </div>
-      </div>
+      </a>
 
       <div class="actions">
         <a class="menu-btn" href="/">← Back to app</a>
