--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <header class="topbar" role="banner">
     <div class="topbar-inner">
-      <div class="brand-wrap">
+      <a class="brand-wrap" href="/" style="text-decoration:none; color:inherit;">
         <img
           class="brand-logo"
           src="https://i.postimg.cc/Fz0xdDzd/Crypto-Lifeguard-Logo-Striking-Impact-background.png"
@@ -23,7 +23,7 @@
           <h1 class="brand-title">Crypto Lifeguard</h1>
           <p class="brand-tagline">Rescue your tokens — personalised alerts without the noise.</p>
         </div>
-      </div>
+      </a>
 
       <div class="actions">
         <div class="dropdown">
