--- a/profile.html
+++ b/profile.html
@@ -28,13 +28,13 @@
 
   <header class="topbar" role="banner">
     <div class="topbar-inner">
-      <div class="brand-wrap">
+      <a class="brand-wrap" href="/" style="text-decoration:none; color:inherit;">
         <img class="brand-logo" src="https://i.postimg.cc/Fz0xdDzd/Crypto-Lifeguard-Logo-Striking-Impact-background.png" alt="Crypto Lifeguard Logo" decoding="async" fetchpriority="high" />
         <div class="brand-text">
           <h1 class="brand-title">Crypto Lifeguard</h1>
           <p class="brand-tagline">Your account</p>
         </div>
-      </div>
+      </a>
       <div class="actions">
         <a class="menu-btn" href="/">← Back</a>
       </div>
