Watchlist token dropdown: improve datalist reliability (autocomplete off, change handler, guards); re-render after enrichment

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <section class="card">
       <h2 class="section-title">Select tokens to monitor</h2>
       <div class="token-select-row">
-  <input id="token-input" class="input" type="text" placeholder="Type a token symbol (e.g., BTC, ETH, MATIC) and press Enter…" list="token-datalist" aria-label="Add token" autocomplete="on" autocapitalize="characters" spellcheck="false" />
+  <input id="token-input" class="input" type="text" placeholder="Type a token symbol (e.g., BTC, ETH, MATIC) and press Enter…" list="token-datalist" aria-label="Add token" autocomplete="off" autocorrect="off" aria-autocomplete="list" autocapitalize="characters" spellcheck="false" />
         <datalist id="token-datalist"></datalist>
         <button id="add-token-btn" class="btn">Add</button>
         <label class="switch small" id="showall-tokens-wrap" title="Show alerts for all tokens">
