Copy: rename 'Show all' toggles to 'Show closed' to reflect including dismissed alerts

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <datalist id="token-datalist"></datalist>
         <button id="add-token-btn" class="btn">Add</button>
         <label class="switch small" id="showall-tokens-wrap" title="Show alerts for all tokens">
-          <span class="switch-caption">Show all alerts</span>
+          <span class="switch-caption">Show closed</span>
           <input type="checkbox" id="toggle-show-all-tokens" />
           <span class="slider" aria-hidden="true"></span>
         </label>
@@ -94,8 +94,8 @@
         <button class="sev-btn active" data-sev="info"     aria-pressed="true" title="Info">🛟</button>
       </div>
 
-      <label class="switch small" id="showall-wrap" title="Include dismissed alerts">
-        <span class="switch-caption">Show all</span>
+      <label class="switch small" id="showall-wrap" title="Include closed/dismissed alerts">
+        <span class="switch-caption">Show closed</span>
         <input type="checkbox" id="toggle-show-all" />
         <span class="slider" aria-hidden="true"></span>
       </label>
