--- a/profile.html
+++ b/profile.html
@@ -87,8 +87,8 @@
           <button class="sev-btn" data-sev="warning" title="Warning">⚠️ Warning</button>
           <button class="sev-btn" data-sev="info" title="Info">🛟 Info</button>
         </div>
-        <label class="switch small" title="Include dismissed alerts">
-          <span class="switch-caption">Show all</span>
+        <label class="switch small" title="Include closed/dismissed alerts">
+          <span class="switch-caption">Show closed</span>
           <input type="checkbox" id="prof-show-all" />
           <span class="slider" aria-hidden="true"></span>
         </label>
