UX: clarify toggles — top-row 'Show all' controls all tokens (local); tabs 'Show closed' controls dismissed (persisted)

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <datalist id="token-datalist"></datalist>
         <button id="add-token-btn" class="btn">Add</button>
         <label class="switch small" id="showall-tokens-wrap" title="Show alerts for all tokens">
-          <span class="switch-caption">Show closed</span>
+          <span class="switch-caption">Show all</span>
           <input type="checkbox" id="toggle-show-all-tokens" />
           <span class="slider" aria-hidden="true"></span>
         </label>
