Add cache busting to admin.js and alerts-tags.js

--- a/admin.html
+++ b/admin.html
@@ -255,7 +255,7 @@
   });
   </script>
   <!-- Load shared tag taxonomy, then admin logic -->
-  <script src="/alerts-tags.js"></script>
-  <script type="module" src="/admin.js"></script>
+  <script src="/alerts-tags.js?v=20251003"></script>
+  <script type="module" src="/admin.js?v=20251003"></script>
 </body>
 </html>
