Deploy: cache-bust assets (20251003f) to ensure live picks up CMC + currency config

--- a/create.html
+++ b/create.html
@@ -110,6 +110,6 @@
   </footer>
 
   <!-- IMPORTANT: module so Vite bundles it -->
-  <script type="module" src="/create.js"></script>
+  <script type="module" src="/create.js?v=20251003f"></script>
 </body>
 </html>
