--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Crypto Lifeguard — Web Demo</title>
-  <link rel="stylesheet" href="./styles.css?v=20251002" />
+  <link rel="stylesheet" href="./styles.css?v=20251003f" />
 </head>
 <body>
   <a href="./create.html" class="fab" aria-label="New alert" title="New alert">+</a>
@@ -120,6 +120,6 @@
   <footer class="footer muted"><span>© 2025 Crypto Lifeguard — demo build</span></footer>
 
   <!-- IMPORTANT for Vite build -->
-  <script type="module" src="/app.js"></script>
+  <script type="module" src="/app.js?v=20251003f"></script>
 </body>
 </html>
