Fix tag filter interface: restore original pill-style buttons inside popup
- Replace checkbox dropdown with original tag filter buttons
- Tag buttons now show inside the popup with proper icons and styling
- Maintain all original functionality: selection, clear all, visual feedback
- Tag buttons use the same styling and behavior as before
- Filter icon still triggers the popup as requested

--- a/index.html
+++ b/index.html
@@ -83,7 +83,9 @@
               <span>Filter by tags</span>
               <button id="reset-tags" class="btn-clear-tags-popup">Clear All</button>
             </div>
-            <!-- Options will be populated by JavaScript -->
+            <div class="tag-filters" id="popup-tag-filters">
+              <!-- Tag filter buttons will be populated by JavaScript -->
+            </div>
           </div>
         </div>
       </div>
