Add CSS funnel icon for filter button

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <!-- Tag filter icon -->
         <div class="tag-filter-wrapper">
           <button class="filter-icon-btn" id="tag-dropdown-trigger" title="Filter by tags">
-            🏷️
+            <div class="funnel-icon"></div>
           </button>
           <div class="tag-dropdown-popup" id="tag-dropdown-options">
             <div class="dropdown-header">
